# AI-service

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
src/ai_service/: cli.py  config.py  ingestion.py  models.py
src/ai_service/api/: app.py  schemas.py
src/ai_service/api/routes/: documents.py  health.py  models.py  query.py
src/ai_service/chunker/: __init__.py  chunker.py
src/ai_service/embeddings/: __init__.py  ollama_embedder.py
src/ai_service/llm/: __init__.py  ollama_client.py
src/ai_service/loaders/: __init__.py  markdown_loader.py  markitdown_loader.py  pdf_loader.py
src/ai_service/rag/: __init__.py  pipeline.py  prompts.py
src/ai_service/vectorstore/: __init__.py  chroma_store.py
tests/: test_api.py  test_chunker.py  test_embeddings.py  test_markitdown_loader.py  test_rag.py  test_vectordtore.py  test_vectorstore.py
