[project]
name = "ai-service"
version = "0.1.0"
description = "Servicio RAG local con Ollama para consulta de manuales"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "pypdf>=5.0.0",
    "typer>=0.13.0",
    "python-multipart>=0.0.12",
    "markitdown[pdf,docx,pptx,xlsx]>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[project.scripts]
ai-service = "ai_service.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_service"]

[tool.ruff]
line-length = 100
target-version = "py311"
